deps/v8/test/message/fail/regress-tdz-closure.js
// Copyright 2026 the V8 project authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

(() => {
    const v1 = __f_9();
    function __f_9() {
        const v5 = new Map();
        v5.set(v1);
        eval("");
    }
})();
